--- a/trunk/virtual_lab/src/main/webapp/partials/search-results.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/search-results.html
@@ -188,6 +188,10 @@
     </div>
 
     </div>
-	<!-- Button to trigger feedback modal - feedback-modal.html -->
-	<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
-  </div> <!-- main content end -->     
+  </div> 
+    		<div class="row-fluid">
+		 	<!-- Button to trigger feedback modal - feedback-modal.html -->
+			<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
+	     </div>
+   </div> 
+      
