--- a/trunk/virtual_lab/src/main/webapp/css/style.css
+++ b/trunk/virtual_lab/src/main/webapp/css/style.css
@@ -4,6 +4,7 @@ body {
  	line-height: 18px;
  	color: #1b1b1b;
  	font-family: Arial, Helvetica, sans-serif;
+    background: url(../img/watermark_alpha.png) repeat ;
 }
 
 /* body#index {
