--- a/trunk/virtual_lab/src/main/webapp/partials/about.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/about.html
@@ -10,5 +10,11 @@
 
 <p>Integer elit ipsum, luctus vel rutrum non, viverra quis nisl. Suspendisse feugiat rhoncus massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam eu erat at leo consequat congue sed ut justo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam posuere aliquet pulvinar. Integer placerat, velit eu facilisis ultrices, lorem justo convallis leo, eget tempus lorem massa vel ligula. Aliquam rutrum porta enim eu feugiat. Nullam non lectus arcu. Phasellus eu leo orci. </p>
 	<!-- Button to trigger feedback modal - feedback-modal.html -->
-	<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
-</div> <!-- main content end -->     
+</div> 
+		<div class="row-fluid">
+		 	<!-- Button to trigger feedback modal - feedback-modal.html -->
+			<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
+	     </div>
+</div> 
+
+     
