--- a/trunk/virtual_lab/src/main/webapp/partials/advanced-search.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/advanced-search.html
@@ -48,10 +48,10 @@
 
 
     </div>
-    <div class="span6">
-
-    
-    </div>
-	<!-- Button to trigger feedback modal - feedback-modal.html -->
-	<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
-  </div> <!-- main content end -->     
+  </div> 
+ 		<div class="row-fluid">
+		 	<!-- Button to trigger feedback modal - feedback-modal.html -->
+			<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
+	     </div>
+  </div> 
+   
