--- a/trunk/virtual_lab/src/main/webapp/partials/help.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/help.html
@@ -34,6 +34,10 @@
     <p>Navigation and links can go here.</p>
 
     </div>
-	<!-- Button to trigger feedback modal - feedback-modal.html -->
-	<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
-</div> <!-- main content end -->     
+</div> 
+   		<div class="row-fluid">
+		 	<!-- Button to trigger feedback modal - feedback-modal.html -->
+			<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
+	     </div>
+</div> 
+    
