--- a/virtual_lab/src/main/webapp/partials/contact.html
+++ b/virtual_lab/src/main/webapp/partials/contact.html
@@ -1,4 +1,4 @@
-    <div class="container-fluid"> <!-- main content start -->
+    <div class="container-fluid">
 
  <div class="row-fluid">
         <h2>Contact</h2>
@@ -71,6 +71,10 @@
     </form>
 
     </div>
-	<!-- Button to trigger feedback modal - feedback-modal.html -->
-	<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
-  </div> <!-- main content end -->     
+  </div> 
+   		<div class="row-fluid">
+		 	<!-- Button to trigger feedback modal - feedback-modal.html -->
+			<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
+	     </div>
+  </div> 
+       
