--- a/virtual_lab/src/main/webapp/partials/members-partners.html
+++ b/virtual_lab/src/main/webapp/partials/members-partners.html
@@ -1,4 +1,4 @@
-    <div class="container-fluid"> <!-- main content start -->
+    <div class="container-fluid"> 
 
 <div class="row-fluid">
       <h2>Members and Partners</h2>
@@ -36,6 +36,10 @@
 
 <span class="partner-logo"><a href="#"><img src="img/logo_nectar.gif" alt="Nectar" /></a></span> <span class="partner-logo"><a href="#"><img src="img/logo_deakin.gif" alt="Deakin" /></a></span>
 
-	<!-- Button to trigger feedback modal - feedback-modal.html -->
-	<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
- </div> <!-- main content end -->     
+ </div> 
+   		<div class="row-fluid">
+		 	<!-- Button to trigger feedback modal - feedback-modal.html -->
+			<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
+	     </div>
+ </div> 
+     
