--- a/trunk/virtual_lab/src/main/webapp/partials/contact.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/contact.html
@@ -1,80 +1,100 @@
-    <div class="container-fluid">
+<div class="container-fluid">
 
- <div class="row-fluid">
-        <h2>Contact</h2>
-      </div>
+	<div class="row-fluid">
+		<h2>Contact</h2>
+	</div>
 
-    <div class="row-fluid">
-      <div class="span6">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum erat purus, sit amet rhoncus felis. Sed fringilla rhoncus nisl mattis pellentesque. Nam eros metus, commodo et accumsan sed, egestas quis tortor. Morbi sapien purus, accumsan non tempus quis, condimentum ut nulla.</p>
+	<div class="row-fluid">
+		<div class="span6">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+				fermentum erat purus, sit amet rhoncus felis. Sed fringilla rhoncus
+				nisl mattis pellentesque. Nam eros metus, commodo et accumsan sed,
+				egestas quis tortor. Morbi sapien purus, accumsan non tempus quis,
+				condimentum ut nulla.</p>
 
-       
 
-      <h3>Contact Details</h3>
-      <p>Aliquam erat volutpat. Integer auctor felis non metus feugiat a vestibulum enim cursus. Etiam nec nibh sed mauris vulputate sollicitudin. Praesent mi metus, ultricies eget consequat et, tempus eu nibh. Ut nec aliquam erat. In in tortor dui, vitae dignissim libero. Donec adipiscing mi eu risus elementum vehicula. Suspendisse potenti. Cras bibendum volutpat luctus. Donec semper tellus lorem. </p>
 
-      <p><i class="icon-envelope"></i> Email: <a href="#">link</a></p>
+			<h3>Contact Details</h3>
+			<p>Aliquam erat volutpat. Integer auctor felis non metus feugiat
+				a vestibulum enim cursus. Etiam nec nibh sed mauris vulputate
+				sollicitudin. Praesent mi metus, ultricies eget consequat et, tempus
+				eu nibh. Ut nec aliquam erat. In in tortor dui, vitae dignissim
+				libero. Donec adipiscing mi eu risus elementum vehicula. Suspendisse
+				potenti. Cras bibendum volutpat luctus. Donec semper tellus lorem.</p>
 
-      <h3>Social Media</h3>
-      <p>Donec adipiscing mi eu risus elementum vehicula. Suspendisse potenti. Cras bibendum volutpat luctus. Donec semper tellus lorem. </p>
-      <p><i class="icon-user"></i> Facebook: <a href="#">link</a></p>
+			<p>
+				<i class="icon-envelope"></i> Email: <a href="#">link</a>
+			</p>
 
-      <p><i class="icon-comment"></i> Twitter: <a href="#">link</a></p>
+			<h3>Social Media</h3>
+			<p>Donec adipiscing mi eu risus elementum vehicula. Suspendisse
+				potenti. Cras bibendum volutpat luctus. Donec semper tellus lorem.</p>
+			<p>
+				<i class="icon-user"></i> Facebook: <a href="#">link</a>
+			</p>
 
-      <p><i class="icon-camera"></i> Instagram: <a href="#">link</a></p>
+			<p>
+				<i class="icon-comment"></i> Twitter: <a href="#">link</a>
+			</p>
 
-    </div>
-    <div class="span6">
+			<p>
+				<i class="icon-camera"></i> Instagram: <a href="#">link</a>
+			</p>
 
-    <form id="contact" class="form-horizontal">
+		</div>
+		<div class="span6">
 
-    <div class="control-group">
-    <label class="control-label" for="inputFirstName">First Name</label>
-    <div class="controls">
-    <input type="text" id="inputFirstName" placeholder="First Name">
-    </div>
-    </div>
+			<form id="contact" class="form-horizontal">
 
-    <div class="control-group">
-    <label class="control-label" for="inputLastName">Last Name</label>
-    <div class="controls">
-    <input type="text" id="inputLastName" placeholder="Last Name">
-    </div>
-    </div>
+				<div class="control-group">
+					<label class="control-label" for="inputFirstName">First
+						Name</label>
+					<div class="controls">
+						<input type="text" id="inputFirstName" placeholder="First Name">
+					</div>
+				</div>
 
-    <div class="control-group">
-    <label class="control-label" for="inputEmail">Email Address</label>
-    <div class="controls">
-    <input type="text" id="inputEmail" placeholder="Email Address">
-    </div>
-    </div>
+				<div class="control-group">
+					<label class="control-label" for="inputLastName">Last Name</label>
+					<div class="controls">
+						<input type="text" id="inputLastName" placeholder="Last Name">
+					</div>
+				</div>
 
-    <div class="control-group">
-    <label class="control-label" for="inputNumber">Phone Number</label>
-    <div class="controls">
-    <input type="text" id="inputNumber" placeholder="Phone Number">
-    </div>
-    </div>
+				<div class="control-group">
+					<label class="control-label" for="inputEmail">Email Address</label>
+					<div class="controls">
+						<input type="text" id="inputEmail" placeholder="Email Address">
+					</div>
+				</div>
 
-    <div class="control-group">
-    <label class="control-label" for="inputMessage">Message</label>
-    <div class="controls">
-    <textarea rows="5" id="inputMessage" placeholder="Message"></textarea>
-    </div>
-    </div>
-    
-    <div class="control-group">
-    <div class="controls">
-    <button type="submit" class="btn">Send</button>
-    </div>
-    </div>
-    </form>
+				<div class="control-group">
+					<label class="control-label" for="inputNumber">Phone Number</label>
+					<div class="controls">
+						<input type="text" id="inputNumber" placeholder="Phone Number">
+					</div>
+				</div>
 
-    </div>
-  </div> 
-   		<div class="row-fluid">
-		 	<!-- Button to trigger feedback modal - feedback-modal.html -->
-			<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
-	     </div>
-  </div> 
-       
+				<div class="control-group">
+					<label class="control-label" for="inputMessage">Message</label>
+					<div class="controls">
+						<textarea rows="5" id="inputMessage" placeholder="Message"></textarea>
+					</div>
+				</div>
+
+				<div class="control-group">
+					<div class="controls">
+						<button type="submit" class="btn">Send</button>
+					</div>
+				</div>
+			</form>
+
+		</div>
+	</div>
+	<div class="row-fluid">
+		<!-- Button to trigger feedback modal - feedback-modal.html -->
+		<a href="#feedbackModal" role="button" data-toggle="modal"
+			class="btn btn-info">Feedback</a>
+	</div>
+</div>
+
