--- a/virtual_lab/src/main/webapp/partials/landing.html
+++ b/virtual_lab/src/main/webapp/partials/landing.html
@@ -1,6 +1,24 @@
     <div class="container-fluid"> <!-- main content start -->
 
       <div class="row-fluid">
+        <div class="span3">
+        	<div>
+        		<img src="./img/huni_dataproviders.png"/>
+        	</div>
+        	<h5>The HuNI Data Providers</h5>
+            <ul>
+	            <li><a href="http://www.afiresearch.rmit.edu.au" target="_blank">AFI Research Collection</a></li>
+	            <li><a href="http://www.ausstage.edu.au/pages/browse" target="_blank">AusStage</a></li>
+	            <li><a href="http://womenaustralia.info" target="_blank">The Australian Women's Register</a></li>
+	            <li><a href="http://www.bonzadb.com.au/" target="_blank">BONZA - National Cinema & Television Databases</a></li>
+	            <li><a href="http://caarp.flinders.edu.au" target="_blank">CAARP - Cinema and Audiences Research Project Database</a></li>
+	            <li><a href="http://www.eoas.info" target="_blank">Encyclopedia of Australian Science</a></li>
+	            <li><a href="http://findandconnect.gov.au" target="_blank">Find and Connect</a></li>
+	            <li><a href="http://www.saulwick.info" target="_blank">Saulwick Polls & Social Research</a></li>
+	            <li><a href="http://www.wallabyclub.org.au/" target="_blank">The Wallaby Club Inc.</a></li>
+            </ul>
+          </div>
+        <div class="span6">
         <div class="search-container">
         <h2>Aggregated Data Search</h2>
 
@@ -84,7 +102,10 @@
             		<a href="#/eventname-search">Events</a>
             	</div>
             </div>
-            </div>
+       </div>
+       </div>
+        <div class="span3">
+      </div>
       </div>
 		<div class="row-fluid">
 		 	<!-- Button to trigger feedback modal - feedback-modal.html -->
