--- a/virtual_lab/src/main/webapp/css/style.css
+++ b/virtual_lab/src/main/webapp/css/style.css
@@ -511,25 +511,25 @@ footer {
 }
 
 .search-container .entry .people-background  a {
-	background-image: url("/virtual_lab/img/people.jpg");
+	background-image: url("img/people.jpg");
 	height: 160px;
 	font-size: 18px;
 }
 
 .search-container .entry .places-background  a {
-	background-image: url("/virtual_lab/img/places.jpg");
+	background-image: url("/img/places.jpg");
 	height: 160px;
 	font-size: 18px;
 }
 
 .search-container .entry .objects-background  a {
-	background-image: url("/virtual_lab/img/objects.jpg");
+	background-image: url("img/objects.jpg");
 	height: 160px;
 	font-size: 18px;
 }
 
 .search-container .entry .events-background  a {
-	background-image: url("/virtual_lab/img/events.jpg");
+	background-image: url("img/events.jpg");
 	height: 160px;
 	font-size: 18px;
 }
