--- a/linked-data/templates/person.html
+++ b/linked-data/templates/person.html
@@ -102,7 +102,7 @@
 				</div>
 
 				<div class="span6 record" id="column-second">
-					<h3>[icon] <span for-each="http://erlangen-crm.org/current/P131_is_identified_by">{http://www.w3.org/1999/02/22-rdf-syntax-ns#value}</span> {http://xmlns.com/foaf/0.1/firstName} {http://xmlns.com/foaf/0.1/lastName}</h3>
+					<h3><img src="img/icon_person.gif"/> <span for-each="http://erlangen-crm.org/current/P131_is_identified_by">{http://www.w3.org/1999/02/22-rdf-syntax-ns#value}</span> {http://xmlns.com/foaf/0.1/firstName} {http://xmlns.com/foaf/0.1/lastName}</h3>
 
 					<ul graph="each">
 						<li class="category">
