--- a/virtual_lab/src/main/webapp/partials/landing.html
+++ b/virtual_lab/src/main/webapp/partials/landing.html
@@ -113,8 +113,6 @@
 		<div class="span3"></div>
 	</div>
 	<div class="row-fluid">
-		<!-- Button to trigger feedback modal - feedback-modal.html -->
-		<a href="#feedbackModal" role="button" data-toggle="modal"
-			class="btn btn-info">Feedback</a>
+		<div ng-include="'partials/feedback-button.html'"></div>
 	</div>
 </div>
