--- a/trunk/virtual_lab/src/main/webapp/partials/feedback-modal.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/feedback-modal.html
@@ -1,17 +1,15 @@
-
 <div id="feedbackModal" class="modal hide fade" tabindex="-1" role="dialog"
-	aria-labelledby="feedbackModalLabel" aria-hidden="true">
+	aria-labelledby="feedbackModalLabel" aria-hidden="true"
+	ng-controller="FeedbackCtrl" ng-init="init()">
 	
 	<form id="feedback-form" class="">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal"
 				aria-hidden="true">×</button>
 			<h3 id="feedbackModalLabel">Feedback</h3>
+			<div>Context: {{currentPath}}</div>
 		</div>
-		<div class="modal-body">
-
 			<div class="modal-body">
-
 				<div class="control-group">
 					<label class="control-label" for="feedbackRating" id="feedBackRatingLabel" >Rating</label>
 					<div class="controls">
@@ -35,9 +33,8 @@
 			</div>
 			<div class="modal-footer">
 				<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-				<button class="btn btn-primary">Submit</button>
+				<button class="btn btn-primary" ng-click="feedback()">Submit</button>
 			</div>
-		</div>
 	</form>
 
 </div>
