--- a/virtual_lab/src/main/webapp/partials/feedback-modal.html
+++ b/virtual_lab/src/main/webapp/partials/feedback-modal.html
@@ -7,7 +7,7 @@
 			<button type="button" class="close" data-dismiss="modal"
 				aria-hidden="true">×</button>
 			<h3 id="feedbackModalLabel">Feedback</h3>
-			<div id="feedbackContext">Context: </div> <!-- {{currentLocation}} -->
+			<div id="feedbackContext">Context: {{currentLocation}}</div> <!-- {{currentLocation}} -->
 		</div>
 			<div class="modal-body">
 				<div class="control-group">
