RR:  for the feedbacking dialog -- more unit and scenario tests (AngularJS,  Bootstrap, Jasmine)

--- a/trunk/virtual_lab/src/main/webapp/partials/feedback-button.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/feedback-button.html
@@ -1,5 +1,5 @@
 <!-- Button to trigger feedback modal - feedback-modal.html -->
-<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-danger">Feedback</a>
+<a data-target="#feedbackModal" role="button" data-toggle="modal" class="btn btn-danger">Feedback</a>
 <span> 
 	We need you! To make sure that the HuNI virtual lab serves
 	the need of its early adopters, we welcome your feedback in the
