added 'identifier' to templates

--- a/linked-data/templates/group.html
+++ b/linked-data/templates/group.html
@@ -110,6 +110,12 @@
 						<li class="result">
 							<a href="#">Group</a>
 						</li>
+						<li class="category">
+							<a href="#">Identifier:</a>
+						</li>
+						<li class="result">
+							<a href="{.}">{.}</a>
+						</li>
 						<li class="category" if="http://erlangen-crm.org/current/P95i_was_formed_by">
 							<a href="#">Formed:</a>
 						</li>
