--- a/trunk/virtual_lab/src/main/webapp/partials/feedback-modal.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/feedback-modal.html
@@ -1,6 +1,5 @@
-<div id="feedbackModal" class="modal hide fade" tabindex="-1" role="dialog"
-	aria-labelledby="feedbackModalLabel" aria-hidden="true"
-	ng-controller="FeedbackModalCtrl">
+<div id="feedbackModal" class="modal" tabindex="-1" role="dialog"
+	aria-labelledby="feedbackModalLabel" aria-hidden="true">
 	
 	<form id="feedback-form" class="">
 		<div class="modal-header">
@@ -14,11 +13,11 @@
 					<label class="control-label" for="feedbackRating" id="feedBackRatingLabel" >Rating</label>
 					<div class="controls">
 						<div class="btn-group" data-toggle="buttons-radio" role="radiogroup" aria-labelledby="feedBackRatingLabel feedbackModalLabel">
-							<button type="button" class="btn btn-primary" role="radio">1</button>
-							<button type="button" class="btn btn-primary" role="radio">2</button>
-							<button type="button" class="btn btn-primary" role="radio">3</button>
-							<button type="button" class="btn btn-primary" role="radio">4</button>
-							<button type="button" class="btn btn-primary" role="radio">5</button>
+							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="1">1</button>
+							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="2">2</button>
+							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="3">3</button>
+							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="4">4</button>
+							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="5">5</button>
 						</div>
 					</div>
 				</div>
@@ -26,14 +25,14 @@
 				<div class="control-group">
 					<label class="control-label" for="feedbackComments" id="feedbackCommentsLabel">Comments</label>
 					<div class="controls">
-						<textarea rows="3" id="feedbackComments" aria-labelledby="feedbackCommentsLabel feedbackModalLabel"></textarea>
+						<textarea rows="3" id="feedbackComments" aria-labelledby="feedbackCommentsLabel feedbackModalLabel" ng-model="comment"></textarea>
 					</div>
 				</div>
 
 			</div>
 			<div class="modal-footer">
-				<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-				<button class="btn btn-primary" ng-click="feedback()">Submit</button>
+				<button class="btn" data-dismiss="modal" aria-hidden="true" ng-click="feedback(false)">Cancel</button>
+				<button class="btn btn-primary" ng-click="feedback(true)">Submit</button>
 			</div>
 	</form>
 
