RR: rejig of feedback dialog handler so I could get rid of JQuery code. -- tidying up.

--- a/trunk/virtual_lab/src/main/webapp/partials/feedback-modal.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/feedback-modal.html
@@ -31,7 +31,7 @@
 
 			</div>
 			<div class="modal-footer">
-				<button class="btn" data-dismiss="modal" aria-hidden="true" ng-click="feedback(false)">Cancel</button>
+				<button class="btn" aria-hidden="true" ng-click="feedback(false)">Cancel</button>
 				<button class="btn btn-primary" ng-click="feedback(true)">Submit</button>
 			</div>
 	</form>
